--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-lottie": "^1.2.3",
     "react-map-gl": "^7.0.19",
     "react-mapbox-gl": "^5.1.1",
@@ -64,6 +65,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@next/bundle-analyzer": "^12.2.5",
+    "@svgr/webpack": "^7.0.0",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
