--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chart.js": "^2.9.4",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.5",
+    "google-map-react": "^2.2.0",
     "mapbox-gl": "^2.10.0",
     "material-ui-popup-state": "^4.0.2",
     "moment": "^2.29.4",
@@ -68,6 +69,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@types/chart.js": "^2.9.37",
+    "@types/google-map-react": "^2.1.7",
     "@types/jest": "^29.0.0",
     "@types/mapbox-gl": "^2.6.0",
     "@types/node": "^18.7.14",
